message pb_test
{
    required string name = 1; //名字
    optional int32  logo = 2; //头像id
}